src/pages/login/page.module.css
.title {
  font-size: 4rem;
  font-weight: bold;
  font-family: "Inter";
  text-align: center;
}

.titleGradientPart {
  background: linear-gradient(90deg, #ffb800 0%, #ff5e00 100%);
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1 1 auto;
}

.innerContainer {
  display: flex;
  flex-direction: column;
  gap: 4rem;
}

